# 2ano_2sem

BD/: Recursos
BD/Bases de Dados, Esquemas e Scripts SQL/Sakila-Modelo Lógico/: document.mwb.xml
BD/Caso de Estudo - A Mercearia da D. Acácia/Esquema Lógico Global da Base de Dados/: document.mwb.xml
BD/Outros/: Links
BD/Trabalho Prático/Parte_I/: Equipa de Trabalho.odt  Relatório - Template (MS Word).doc
IO/: Aviso  Links Externos
IO/1.º Projeto/Trabalho Final/: A106928.lp
IO/2.ºProjeto/: Output.txt
IO/Exercícios/Ficheiros auxiliadores das fichas/: Quiz dualidade dieta.lp
IO/Outros/: Links
IO/Slides_1ªParte/10_Dualidade e método simplex dual/: Input LPSolve caminhoMaisCurtoExemploDualidade.lp
IO/Slides_1ªParte/1_Introdução e Programação Linear/: SLIDES caminhoMaisCurtoComRestricoes.lp
IO/Slides_1ªParte/2_Modelos de Programação Linear/: PlanoProducao.lp  TransporteTerras.lp
IO/Software/: Ipsolve
IO/Software/RELAX4/: RELAX4
IO/TP's/TP1/: dietaArrozAtumBrocolos.lp  exercicio1.1.lp  exercicio1.2.lp
IO/TP's/TP10/: exercicio 12.3.lp  exercicio12.4.lp  exercicio12.8.lp
IO/TP's/TP2/: exercicio1.4.lp  exercicio1.5.lp  exercicio1.7.lp
IO/TP's/TP3/: exercicio1.6.lp
POO/Outros/: Links
RC/: Comandos  pode dar jeito
RC/Outros/: Links
Repetidas/PI/: FizzBuzz  fizzbuzz.c  q1.c  q3.c  q4.c
SO/Guiões/Guião5/: ex1.c
SO/Outros/: Links
SO/Projeto/TP_SO/: CMakeLists.txt  makefile  performance_test.sh
SO/Projeto/TP_SO/Documents/: Bi.txt
SO/Projeto/TP_SO/include/: document.h  message.h
SO/Projeto/TP_SO/src/: dclient.c  document.c  dserver.c
(+108 files in other folders)
